# YOLO-World_ros

./: .gitmodules  Dockerfile  README.md  docker-compose.yml  setup.sh
src/image_publisher/: CMakeLists.txt  package.xml
src/image_publisher/launch/: image_publisher.launch
src/image_publisher/src/: image_publisher.cpp
src/yolo_launch/: CMakeLists.txt  package.xml
src/yolo_launch/launch/: main.launch
