<package format="2">
  <name>yolo_launch</name>
  <version>0.0.0</version>
  <description>The yolo_launch package</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_view</build_depend>
  <build_depend>boost</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>boost</exec_depend>

  <export>
  </export>
</package>